# RAG-Bot

./: .gitignore  RAG-Bot.py  README.md  pyproject.toml  下载命令.md  已安装环境.md
chroma_db/d2ce1232-94b5-4fd9-892c-1ef246520d05/: index_metadata.pickle
